--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,46 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Солнечное утро в солнечной стране
+    <header class="header">
+      <div class="content">
+        <img
+          src="../imgs/main.png"
+          alt="Тото сидит за ноутбуком, идет мыслительный процесс"
+          class="main-img"
+        />
+        <h1 class="header-title">
+          <span class="text-orange">Когнитивные <br />искажения</span> <br />в
+          программирование
+        </h1>
+        <div class="header-text">
+          <div class="left-text">
+            <p>
+              Мы, разработчики, часто сталкиваемся с проблемами, которые идут
+              вразрез с нашей продуктивностью. Но мы часто игнорируем целостную
+              картину. Некоторые из этих проблем малозаметны, некоторые
+              существенны. Иногда с ними можно как-то справиться, а иногда, к
+              сожалению, нет.
+            </p>
+          </div>
+          <div class="right-text">
+            <p>
+              Вместе они формируют что-то вроде замкнутого цикла, и это может
+              привести к длительной потере продуктивности, багам и бесконечному
+              разочарованию.<br />
+              <br />
+              Если мы сможем минимизировать воздействие одного или нескольких из
+              этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+            </p>
+            <a href="#" class="button-detail">Подробнее</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
