add second section

--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,21 @@
         </div>
       </div>
     </header>
+    <section>
+      <h1 class>
+        Что же это такое,<br />
+        <span class="text-orange">когнитивные искажения?</span>
+      </h1>
+      <p class="marg">Что такое когнитивные искажения. Petrovna Channel</p>
+      <iframe
+        class="video"
+        width="919"
+        height="569"
+        src="https://www.youtube.com/embed/jie9AizBqss"
+        frameborder="0"
+        allowfullscreen
+        >Видео про когнитивные искажения
+      </iframe>
+    </section>
   </body>
 </html>
