add shitty nabigation

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
         </div>
       </div>
     </header>
+
     <section>
       <h1 class>
         Что же это такое,<br />
@@ -64,6 +65,61 @@
         allowfullscreen
         >Видео про когнитивные искажения
       </iframe>
+    </section>
+
+    <section class="nav-background">
+      <nav class="flex-nav">
+        <div class="card">
+          <h3 class="h3style">
+            <span class="text-orange">5 когнитивных искажений</span><br />о
+            существовании которых стоит помнить
+          </h3>
+        </div>
+        <a class="a" href=""
+          ><h3>
+            <span class="numbers">1</span><br /><span class="text-orange"
+              >Эффект ИКЕА</span
+            >
+          </h3>
+          Вы переоцениваете собственные решения, и, как следствие,
+          недооцениваете решения других.</a
+        >
+        <a class="a" href=""
+          ><h3>
+            <span class="numbers">2</span><br /><span class="text-orange"
+              >Преждевременная оптимизация</span
+            >
+          </h3>
+          Вы оптимизируете что-то задолго до того, как в этом появляется
+          необходимость.</a
+        >
+        <a class="a" href=""
+          ><h3>
+            <span class="numbers">3</span><br /><span class="text-orange"
+              >Искажение новизны</span
+            >
+          </h3>
+          Вы даёте более высокую оценку тем событиям, которые произошли недавно,
+          и недооцениваете более старые.</a
+        >
+        <a class="a" href=""
+          ><h3>
+            <span class="numbers">4</span><br /><span class="text-orange"
+              >Гиперболическое обесценивание</span
+            >
+          </h3>
+          Вы гонитесь за немедленной маленькой выгодой и игнорируете более
+          крупную, недоступную сейчас, но доступную в будущем.</a
+        >
+        <a class="a" href=""
+          ><h3>
+            <span class="numbers">5</span><br /><span class="text-orange"
+              >Ошибка планирования</span
+            >
+          </h3>
+          Неправильно рассчитывать время необходимое для завершения задачи.</a
+        >
+      </nav>
     </section>
   </body>
 </html>
